[gd_scene load_steps=23 format=3 uid="uid://yy2bc4x6ej2v"]

[ext_resource type="Script" uid="uid://x0umafx8x0e6" path="res://scripts/novel.gd" id="1_rhcgk"]
[ext_resource type="Texture2D" uid="uid://bixxklrhp20xv" path="res://assets/svg/arrow-big-left-dash.svg" id="2_5t18o"]
[ext_resource type="Texture2D" uid="uid://crmavh55epsaw" path="res://assets/svg/arrow-down-to-line.svg" id="3_yk7lt"]
[ext_resource type="Texture2D" uid="uid://tvhl7jwl7b7n" path="res://assets/svg/refresh-cw.svg" id="4_wq1qs"]
[ext_resource type="Texture2D" uid="uid://bbiyrq4jd717c" path="res://assets/svg/download.svg" id="5_5twmx"]
[ext_resource type="Texture2D" uid="uid://hb86w7ejwgix" path="res://assets/svg/book-open.svg" id="5_d2mup"]
[ext_resource type="Texture2D" uid="uid://dddsofvosn3xx" path="res://assets/svg/chevron-down.svg" id="5_dmdpw"]
[ext_resource type="Texture2D" uid="uid://qexqob8efdwo" path="res://assets/svg/Leonardo_Phoenix_10_Create_an_eyecatching_splash_loading_scree_3.jpg" id="5_wq1qs"]
[ext_resource type="Texture2D" uid="uid://cfkdsgfpnv8wn" path="res://assets/svg/circle-play.svg" id="6_3oiyq"]
[ext_resource type="Texture2D" uid="uid://bsokmx6rss0m4" path="res://assets/svg/list-filter.svg" id="6_5twmx"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8ub0v"]

[sub_resource type="LabelSettings" id="LabelSettings_wq1qs"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rowyq"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.901961, 0.223529, 0.27451, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wraff"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhcgk"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.901961, 0.223529, 0.27451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oiyq"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5twmx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.901961, 0.223529, 0.27451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wraff"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq1qs"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.101961, 0.105882, 0.184314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwtvr"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.960784, 0.960784, 0.960784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8l8r"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.101961, 0.105882, 0.184314, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqdav"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.960784, 0.960784, 0.960784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control" node_paths=PackedStringArray("prev_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhcgk")
next_page = "uid://dliwbupvuedto"
prev_page = "uid://flu6c3mv3dem"
prev_button = NodePath("MarginContainer/Novel/title/close")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.101961, 0.105882, 0.184314, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Novel" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="title" type="HBoxContainer" parent="MarginContainer/Novel"]
layout_mode = 2

[node name="close" type="Button" parent="MarginContainer/Novel/title"]
material = SubResource("CanvasItemMaterial_8ub0v")
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_5t18o")
flat = true

[node name="downloadbutton" type="MenuButton" parent="MarginContainer/Novel/title"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_8ub0v")
layout_mode = 2
icon = ExtResource("3_yk7lt")
item_count = 5
popup/item_0/text = "Next Chapter"
popup/item_0/id = 0
popup/item_1/text = "Next 5 Chapters"
popup/item_1/id = 1
popup/item_2/text = "Next 10 Chapters"
popup/item_2/id = 3
popup/item_3/text = "Custom Download"
popup/item_3/id = 4
popup/item_4/text = "Delete Downloads"
popup/item_4/id = 2

[node name="updatetoggle" type="Button" parent="MarginContainer/Novel/title"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_8ub0v")
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_wq1qs")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Novel"]
layout_mode = 2
size_flags_vertical = 3

[node name="body" type="VBoxContainer" parent="MarginContainer/Novel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hero" type="HBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body"]
layout_mode = 2

[node name="NovelCover" type="TextureRect" parent="MarginContainer/Novel/ScrollContainer/body/hero"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 200)
layout_mode = 2
texture = ExtResource("5_wq1qs")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body/hero"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NovelName" type="Label" parent="MarginContainer/Novel/ScrollContainer/body/hero/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Novel name"
label_settings = SubResource("LabelSettings_wq1qs")
autowrap_mode = 3

[node name="NovelAuthor" type="Label" parent="MarginContainer/Novel/ScrollContainer/body/hero/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Novel author"
autowrap_mode = 3

[node name="NovelStatus" type="Label" parent="MarginContainer/Novel/ScrollContainer/body/hero/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Ongoing"
autowrap_mode = 3

[node name="actions" type="HBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body"]
layout_mode = 2
alignment = 1

[node name="saveButton" type="Button" parent="MarginContainer/Novel/ScrollContainer/body/actions"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_8ub0v")
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
icon = ExtResource("5_d2mup")
flat = true
icon_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/Novel/ScrollContainer/body/actions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body"]
layout_mode = 2

[node name="NovelDesc" type="Label" parent="MarginContainer/Novel/ScrollContainer/body/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "novel description"
autowrap_mode = 3
max_lines_visible = 2

[node name="ExpandButton" type="Button" parent="MarginContainer/Novel/ScrollContainer/body/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("5_dmdpw")
flat = true
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body"]
layout_mode = 2

[node name="chapters" type="Label" parent="MarginContainer/Novel/ScrollContainer/body/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Chapters"

[node name="filterbutton" type="MenuButton" parent="MarginContainer/Novel/ScrollContainer/body/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_8ub0v")
layout_mode = 2
icon = ExtResource("6_5twmx")
item_count = 2
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Only downloaded"
popup/item_1/id = 1

[node name="currently_reading" type="Button" parent="MarginContainer/Novel/ScrollContainer/body"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_rowyq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wraff")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhcgk")
text = "Currently reading Chapter 0"
clip_text = true

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/Novel/ScrollContainer/body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3oiyq")

[node name="body" type="VBoxContainer" parent="MarginContainer/Novel/ScrollContainer/body/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/Novel/ScrollContainer/body/MarginContainer/body"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 1
text = "Chapter1"
icon = ExtResource("5_5twmx")
alignment = 0
icon_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/Novel"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/Novel/Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_5twmx")
icon = ExtResource("6_3oiyq")
expand_icon = true

[node name="customdownloadpopuup" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(250, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_wraff")

[node name="Control" type="Control" parent="customdownloadpopuup"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="customdownloadpopuup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Chapternum" type="Label" parent="customdownloadpopuup/Control/VBoxContainer"]
layout_mode = 2
text = "Chapter"
horizontal_alignment = 1

[node name="chapterdownload" type="HBoxContainer" parent="customdownloadpopuup/Control/VBoxContainer"]
layout_mode = 2

[node name="from" type="TextEdit" parent="customdownloadpopuup/Control/VBoxContainer/chapterdownload"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_wq1qs")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwtvr")
placeholder_text = "from"

[node name="to" type="TextEdit" parent="customdownloadpopuup/Control/VBoxContainer/chapterdownload"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_t8l8r")
theme_override_styles/focus = SubResource("StyleBoxFlat_iqdav")
placeholder_text = "to"

[node name="download" type="Button" parent="customdownloadpopuup/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "download"
icon = ExtResource("3_yk7lt")

[connection signal="toggled" from="MarginContainer/Novel/title/updatetoggle" to="." method="_on_updatetoggle_toggled"]
[connection signal="toggled" from="MarginContainer/Novel/ScrollContainer/body/VBoxContainer/ExpandButton" to="." method="_on_expand_button_toggled"]
[connection signal="pressed" from="MarginContainer/Novel/ScrollContainer/body/currently_reading" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Novel/Control/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="customdownloadpopuup/Control/VBoxContainer/download" to="." method="_on_download_pressed"]
